syntax = "proto3";

import "Models/Analyzer/Proto/ItemPrice.proto";

option csharp_namespace = "Tradie.Analyzer.Proto";

message ItemListingProperties {
  uint32 x = 1;
  uint32 y = 2;
  ItemPrice price = 3;
  string note = 4;
}
